methods.picture.MethodsPicture.scala.code
override def run() {
var x=0
var y=0
var z=0
  for (x<-0 to 2){
    ligneV();
    changeLigne();
  }}
def fourV(c:Color){ 
  makeV(Color.YELLOW)
  makeV(Color.RED)
  makeV(Color.BLUE)
  makeV(Color.GREEN)
}
    
def makeV(c:Color) {
    setBrushColor(c:Color);
    forward();
    forward();
    brushDown();
    brushUp();
    left();
    forward();
    right();
    forward();
    brushDown();
    brushUp();
    forward();
    right();
    forward();
    brushDown();
    brushUp();
    left();
    forward();
    forward();
    left();
}
    
 def ligneV(){
   for(z<-0 to 2){
     fourV(c:color);
     for(x<- 0 to 6){
       forward();
     }
   }
}
   
     
 def changeLigne(){
   left();
   for(y<-0 to 6){
     forward();
     }
   right();
   
 }
